Update db schema - rename column tab_num->tab_lb - add V_QTL view